--- a/UDP_client/Cargo.toml
+++ b/UDP_client/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 rand = "0.7.3"
 bincode = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+byteorder = "1.3.4"
+crc32fast = "1.2.1"
