--- a/UDP_server/CMakeLists.txt
+++ b/UDP_server/CMakeLists.txt
@@ -3,4 +3,4 @@ project(UDP_server)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(UDP_server main.cpp udp_server.h udp_server.cpp interaction.cpp interaction.h ../UDP_client/src/crc32c.c)
+add_executable(UDP_server main.cpp udp_server.h udp_server.cpp interaction.cpp interaction.h lib.cpp lib.h)
